--- a/src/ru/kstovotorgservice/MainScene.fxml
+++ b/src/ru/kstovotorgservice/MainScene.fxml
@@ -9,7 +9,7 @@
 <VBox fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400" minWidth="800.0" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kstovotorgservice.Controller">
       <MenuBar prefHeight="25.0" prefWidth="578.0">
           <Menu mnemonicParsing="false" text="Файл">
-              <MenuItem fx:id="closeMenu" mnemonicParsing="false" onAction="#closeProg" text="Close" />
+              <MenuItem fx:id="closeMenu" mnemonicParsing="false" text="Выход" />
           </Menu>
           <Menu mnemonicParsing="false" text="Редактирование">
               <MenuItem mnemonicParsing="false" text="Удалить строку" />
