--- a/src/ru/kstovotorgservice/MainScene.fxml
+++ b/src/ru/kstovotorgservice/MainScene.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400" minWidth="800.0" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kstovotorgservice.Controller">
-      <MenuBar prefHeight="25.0" prefWidth="578.0">
+<VBox fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400" minWidth="570.0" prefHeight="400.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kstovotorgservice.Controller">
+      <MenuBar prefHeight="25.0" prefWidth="576.0">
           <Menu mnemonicParsing="false" text="Файл">
               <MenuItem fx:id="closeMenu" mnemonicParsing="false" text="Выход" />
           </Menu>
@@ -18,5 +20,10 @@
               <MenuItem fx:id="aboutMenu" mnemonicParsing="false" onAction="#aboutMenuAction" text="О программе..." />
           </Menu>
       </MenuBar>
-      <AnchorPane prefHeight="376.0" prefWidth="600.0" />
+      <AnchorPane prefHeight="371.0" prefWidth="570.0">
+      <children>
+         <ListView fx:id="posList" editable="true" layoutX="12.0" layoutY="13.0" prefHeight="314.0" prefWidth="549.0" />
+         <Button fx:id="testButton" layoutX="12.0" layoutY="337.0" mnemonicParsing="false" onAction="#testButtonAction" text="Button" />
+         <Button fx:id="testButton1" layoutX="70.0" layoutY="337.0" mnemonicParsing="false" onAction="#testButtonAction1" text="test" />
+      </children></AnchorPane>
 </VBox>
