--- a/src/ru/kstovoservice/Shop.fxml
+++ b/src/ru/kstovoservice/Shop.fxml
@@ -8,48 +8,59 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0" prefWidth="560.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kstovoservice.ShopController">
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="282.0" prefWidth="532.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kstovoservice.ShopController">
    <children>
-      <Button layoutX="516.0" layoutY="224.0" mnemonicParsing="false" text="OK" />
-      <Button layoutX="451.0" layoutY="224.0" mnemonicParsing="false" text="Отмена" />
-      <Label layoutX="14.0" layoutY="54.0" prefHeight="25.0" prefWidth="105.0" text="Папка обмена:">
+      <Label layoutX="5.0" layoutY="13.0" prefHeight="25.0" prefWidth="150.0" text="Наименование кассы:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Separator layoutX="15.0" layoutY="91.0" prefHeight="3.0" prefWidth="537.0" />
-      <Label layoutX="15.0" layoutY="102.0" prefHeight="25.0" prefWidth="105.0" text="Фронт-офис:">
+      <Button layoutX="484.0" layoutY="240.0" mnemonicParsing="false" text="OK" />
+      <Button layoutX="419.0" layoutY="240.0" mnemonicParsing="false" text="Отмена" />
+      <Label layoutX="6.0" layoutY="70.0" prefHeight="25.0" prefWidth="105.0" text="Папка обмена:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="frontChoiceBox" layoutX="120.0" layoutY="102.0" prefWidth="150.0" />
-      <Separator layoutX="15.0" layoutY="137.0" prefHeight="3.0" prefWidth="537.0" />
-      <Label layoutX="15.0" layoutY="149.0" prefHeight="25.0" prefWidth="105.0" text="Файл-флаг:">
+      <Separator layoutX="15.0" layoutY="107.0" prefHeight="3.0" prefWidth="510.0" />
+      <Label layoutX="6.0" layoutY="118.0" prefHeight="25.0" prefWidth="105.0" text="Фронт-офис:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="15.0" layoutY="186.0" prefHeight="25.0" prefWidth="105.0" text="Файл отчета:">
+      <ChoiceBox fx:id="frontChoiceBox" layoutX="158.0" layoutY="118.0" prefWidth="150.0" />
+      <Separator layoutX="15.0" layoutY="153.0" prefHeight="3.0" prefWidth="510.0" />
+      <Label layoutX="4.0" layoutY="202.0" prefHeight="25.0" prefWidth="150.0" text="Наименование отчета:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="flag" layoutX="120.0" layoutY="147.0" prefHeight="30.0" prefWidth="429.0">
+      <TextField fx:id="flag" layoutX="156.0" layoutY="163.0" prefHeight="30.0" prefWidth="362.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="rep" layoutX="120.0" layoutY="184.0" prefHeight="30.0" prefWidth="429.0">
+      <TextField fx:id="rep" layoutX="156.0" layoutY="200.0" prefHeight="30.0" prefWidth="362.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="dirExchange" layoutX="112.0" layoutY="51.0" prefHeight="30.0" prefWidth="407.0" text="Не определено!!!">
+      <TextField fx:id="dirExchange" layoutX="158.0" layoutY="67.0" prefHeight="30.0" prefWidth="337.0" text="Не определено!!!">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Button fx:id="buttonDir" layoutX="521.0" layoutY="54.0" mnemonicParsing="false" prefHeight="3.0" prefWidth="11.0" text="..." />
+      <Button fx:id="buttonDir" layoutX="496.0" layoutY="70.0" mnemonicParsing="false" prefHeight="3.0" prefWidth="11.0" text="..." />
+      <Label layoutX="7.0" layoutY="166.0" prefHeight="25.0" prefWidth="132.0" text="Имя файла-флага:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="posName" layoutX="159.0" layoutY="12.0" prefHeight="30.0" prefWidth="362.0" text="Касса №1">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Separator layoutX="13.0" layoutY="55.0" prefHeight="3.0" prefWidth="510.0" />
    </children>
 </AnchorPane>
