--- a/src/ru/kstovoservice/Main.fxml
+++ b/src/ru/kstovoservice/Main.fxml
@@ -1,35 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400" minWidth="570.0"
-      prefHeight="400.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="ru.kstovoservice.MainController">
+<?import javafx.scene.text.Font?>
+
+<VBox fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="243.0" minWidth="570.0" prefHeight="429.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kstovoservice.MainController">
     <MenuBar prefHeight="25.0" prefWidth="576.0">
         <Menu mnemonicParsing="false" text="Файл">
-            <MenuItem fx:id="closeMenu" mnemonicParsing="false" text="Выход"/>
+            <MenuItem fx:id="closeMenu" mnemonicParsing="false" text="Выход" />
         </Menu>
         <Menu mnemonicParsing="false" text="Редактирование">
-            <MenuItem fx:id="setString" mnemonicParsing="false" onAction="#addStringAction"
-                      text="Добавить новую кассу"/>
-            <MenuItem fx:id="editString" mnemonicParsing="false" onAction="#editStringAction"
-                      text="Редактирорвать текущую кассу"/>
-            <MenuItem fx:id="delString" mnemonicParsing="false" onAction="#delStringAction"
-                      text="Удалить текущую кассу"/>
+            <MenuItem fx:id="setString" mnemonicParsing="false" onAction="#addStringAction" text="Добавить новую кассу" />
+            <MenuItem fx:id="editString" mnemonicParsing="false" onAction="#editStringAction" text="Редактирорвать текущую кассу" />
+            <MenuItem fx:id="delString" mnemonicParsing="false" onAction="#delStringAction" text="Удалить текущую кассу" />
         </Menu>
         <Menu mnemonicParsing="false" text="Помощь">
-            <MenuItem fx:id="aboutMenu" mnemonicParsing="false" onAction="#aboutMenuAction" text="О программе..."/>
+            <MenuItem fx:id="aboutMenu" mnemonicParsing="false" onAction="#aboutMenuAction" text="О программе..." />
         </Menu>
     </MenuBar>
-    <AnchorPane prefHeight="371.0" prefWidth="570.0">
+      <ListView fx:id="posList" editable="true" prefHeight="299.0" prefWidth="611.0" />
+    <AnchorPane prefHeight="126.0" prefWidth="611.0">
         <children>
-            <ListView fx:id="posList" editable="true" layoutX="12.0" layoutY="13.0" prefHeight="314.0"
-                      prefWidth="549.0"/>
-            <Button fx:id="testButton" layoutX="12.0" layoutY="337.0" mnemonicParsing="false"
-                    onAction="#testButtonAction" text="Button"/>
-            <Button fx:id="testButton1" layoutX="70.0" layoutY="337.0" mnemonicParsing="false"
-                    onAction="#testButtonAction1" text="test"/>
+            <Button fx:id="repButton" layoutX="18.0" layoutY="84.0" mnemonicParsing="false" onAction="#repButtonAction" text="Загрузить" />
+         <Label layoutX="230.0" layoutY="2.0" prefHeight="25.0" prefWidth="119.0" text="Загрузка отчета">
+            <font>
+               <Font size="16.0" />
+            </font></Label>
+         <ChoiceBox layoutX="18.0" layoutY="47.0" prefWidth="150.0" />
+         <DatePicker layoutX="178.0" layoutY="47.0" />
+         <DatePicker layoutX="359.0" layoutY="47.0" />
+         <Label fx:id="labelRep" layoutX="109.0" layoutY="87.0" text="Результат загрузки отчета">
+            <font>
+               <Font size="14.0" />
+            </font></Label>
+         <TextField layoutX="178.0" layoutY="47.0" prefHeight="25.0" prefWidth="174.0" visible="false" />
+         <Label fx:id="label1" layoutX="178.0" layoutY="29.0" text="Label" />
+         <Label fx:id="label2" layoutX="359.0" layoutY="29.0" text="Label" />
         </children>
     </AnchorPane>
 </VBox>
